@@ -17,6 +17,7 @@
 - added: `U.decryptVAL()` for decrypt value
 - added: `controller.nocache()`
 - added: `controller.nocontent()`
+- added: `REPO` as a global variable
 
 - updated: `$.invalid()` without arguments can return a function `function(err)`
 - updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
